Success/failure dialog and AJAX load mask

--- a/webapp/View/index.phtml
+++ b/webapp/View/index.phtml
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
 	
-	<div class="col-md-4">
+	<div class="col-sm-4">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
 				<h3 class="panel-title">Available features</h3>
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 	
-	<div class="col-md-8">
+	<div class="col-sm-8">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
 				<h3 class="panel-title" id="board-name">Board</h3>
@@ -35,4 +35,21 @@
 		</div>
 	</div>
 	
+</div>
+
+<div class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Device Tree editor</h4>
+      </div>
+      <div class="modal-body">
+        <p id="modal-msg"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
