--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -10,10 +10,13 @@
 		<link href="/fonts/ArchivoNarrow.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/bootstrap/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="/jquery.loadmask.css">
 		<script src="/jquery-1.11.3.min.js"></script>
 		<script src="/jquery-ui/jquery-ui.min.js"></script>
 		<script src="/jquery.ui-contextmenu.js"></script>
 		<script src="/boardmanager.js"></script>
+		<script src="/jquery.loadmask.js"></script>
+		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		
 		<script src="/boards/qdl/board.js"></script>
 		<link rel="stylesheet" href="/boards/qdl/board.css">
