--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -24,7 +24,7 @@
 	<body>
 		
 		<div class="container-fluid">
-			<div class="row">
+			<div class="row-fluid">
 				<div class="col-xs-12">
 
 					<ul class="nav nav-tabs" style="margin-top: 10px;">
@@ -49,3 +49,5 @@
 					
 				</div>
 			</div>
+		</div>
+		<div class="container">
