--- a/public/boards/qdl/board.css
+++ b/public/boards/qdl/board.css
@@ -2,9 +2,13 @@
     margin-bottom: 0px;
 }
 
-.dragzindex {
+.dragobj {
     z-index: 666;
-    opacity: 0.7;
+    opacity: 0.8;
+    width:25px;
+    height:21px;
+    background-color:orange;
+    border: 1px solid gray;
 }
 
 #board {
