--- a/webapp/View/index.phtml
+++ b/webapp/View/index.phtml
@@ -18,8 +18,8 @@
 				<h3 class="panel-title">Configuration</h3>
 			</div>
 			<div class="panel-body">
-				<button class="btn btn-primary" id="save-btn">Apply</button>
-				<button class="btn btn-warning" id="reset-btn">Reset</button>
+				<button class="btn btn-primary" id="save-btn">Apply configuration</button>
+				<button class="btn btn-warning" id="reset-btn">Reset all pins to GPIOs</button>
 			</div>
 		</div>
 	</div>
@@ -53,3 +53,14 @@
     </div>
   </div>
 </div>
+
+<?php if ($configuration) { ?>
+<script type="text/javascript">
+	$(function() {
+		var configuration = '<?php echo $configuration; ?>';
+		if (configuration) {
+			applyConfiguration(JSON.parse(configuration));
+		}
+	});
+</script>
+<?php } ?>
