Splitted boards CSS file

--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -18,8 +18,9 @@
 		<script src="/jquery.loadmask.js"></script>
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		
-		<script src="/boards/qdl/board.js"></script>
-		<link rel="stylesheet" href="/boards/qdl/board.css">
+		<link rel="stylesheet" href="/boards.css">
+		<script src="/boards/<?php echo $board; ?>/board.js"></script>
+		<link rel="stylesheet" href="/boards/<?php echo $board; ?>/board.css">
 	</head>
 	<body>
 		
