--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -25,30 +25,10 @@
 	<body>
 		
 		<div class="container-fluid">
-			<div class="row-fluid">
-				<div class="col-xs-12">
-
-					<ul class="nav nav-tabs" style="margin-top: 10px;">
-						<li style="font-size: 18px; line-height: 40px; margin-right: 15px;">Device Tree editor</li>
-						<?php
-						$menu = array(
-							array(
-								'controller' => 'index',
-								'name' => 'Customize your configuration',
-							),
-						);
-						
-						foreach ($menu as $item) {
-							$attrs = '';
-							if ($item['controller'] == $this->className) {
-								$attrs = 'class="active"';
-							}
-							echo "<li $attrs><a href=\"$item[controller]\">$item[name]</a></li>";
-						}
-						?>
-					</ul>
-					
-				</div>
-			</div>
-		</div>
-		<div class="container">
+			<h1>Device Tree editor</h1>
+			
+			<p>By default, all the external pins on your <span class="board-name">UDOO</span> board
+				are configured to be used as GPIOs.</p>
+			<p>This tool allows you to edit this configuration, enabling additional peripherals, like serial ports, I2C buses and more.</p>
+			<p>Drag an "available feature" and drop in on an available pin. You can't drop the desired feature on any pin but only in the white-highlighted ones.
+			Repeat for all the desired features and click "Apply configuration" when done.</p>
