--- a/public/boards.css
+++ b/public/boards.css
@@ -1,13 +1,43 @@
+body {
+    background-color: #F1F3F6;
+}
+
+.container-fluid {
+   max-width:1000px;
+}
+
+h1 {
+    color: rgb(106, 108, 111);
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    line-height: 33px;
+    margin: 30px 0 15px 0;
+    text-align: center;
+}
+
+.ui-draggable {
+    cursor: move;
+}
+
+.ui-state-hover {
+    box-shadow: 0px 0px 20px 0px rgba(255,255,255,0.7);
+}
+
+.pin-busy {
+    cursor: context-menu !important;
+}
+
 #features {
     margin-bottom: 0px;
 }
 
 .dragobj {
+    cursor: move;
     z-index: 666;
     opacity: 0.8;
     width:25px;
     height:21px;
-    background-color:orange;
+    background-color: #ff8000;
     border: 1px solid gray;
 }
 
@@ -15,7 +45,7 @@
     width: 27px;
     height: 23px;
     line-height: 23px;
-    border: 1px solid gray;
+    border: 1px solid #E57300;
     position: absolute;
     font-family: 'Archivo Narrow', sans-serif;
     font-size: 13px;
