--- a/webapp/View/index.phtml
+++ b/webapp/View/index.phtml
@@ -2,7 +2,7 @@
 
 <div class="row">
 	
-	<div class="col-sm-4">
+	<div class="col-xs-4">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
 				<h3 class="panel-title">Available features</h3>
@@ -17,17 +17,18 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">Configuration</h3>
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" style="text-align:center;">
 				<button class="btn btn-primary" id="save-btn">Apply configuration</button>
+				<br><br>
 				<button class="btn btn-warning" id="reset-btn">Reset all pins to GPIOs</button>
 			</div>
 		</div>
 	</div>
 	
-	<div class="col-sm-8">
+	<div class="col-xs-8">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="panel-title" id="board-name">Board</h3>
+				<h3 class="panel-title board-name">Board</h3>
 			</div>
 			<div class="panel-body board-ct">
 				<div id="board"></div>
