--- a/webapp/View/index.phtml
+++ b/webapp/View/index.phtml
@@ -8,19 +8,8 @@
 				<h3 class="panel-title">Available features</h3>
 			</div>
 			<div class="panel-body">
-				<ul class="list-group" id="features">
+				<ul class="nav nav-pills nav-stacked" id="features">
 				</ul>
-			</div>
-		</div>
-		
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<h3 class="panel-title">Configuration</h3>
-			</div>
-			<div class="panel-body" style="text-align:center;">
-				<button class="btn btn-primary" id="save-btn">Apply configuration</button>
-				<br><br>
-				<button class="btn btn-warning" id="reset-btn">Reset all pins to GPIOs</button>
 			</div>
 		</div>
 	</div>
