--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -54,8 +54,8 @@
 	
 		
 		<div class="container-fluid">
-			<p>By default, all the external pins on your <span class="board-name">UDOO</span> board
+			<p>By default, most of the external pins on your <span class="board-name">UDOO</span> board
 				are configured to be used as GPIOs.</p>
 			<p>This tool allows you to edit this configuration, enabling additional peripherals, like serial ports, I2C buses and more.</p>
-			<p>Drag an "available feature" and drop in on an available pin. You can't drop the desired feature on any pin but only in the white-highlighted ones.
-			Repeat for all the desired features and click "Apply configuration" when done.</p>
+			<p>Drag a feature you would like to export on the pinout and drop in on an available pin. You can't drop the desired feature on any pin but only in the white-highlighted ones.
+			Repeat for all the desired features and click "Apply configuration" when done. To remove a feature, right-click its pin.</p>
