Gui fixes. Release 1.3

--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -20,6 +20,7 @@
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/material/js/material.min.js"></script>
 		<script src="/material/js/ripples.min.js"></script>
+		<script src="/jquery.ui.touch-punch.min.js"></script>
 		
 		<link rel="stylesheet" href="/boards.css">
 		<script src="/boards/<?php echo $board; ?>/board.js"></script>
