--- a/webapp/View/boardunsupported.phtml
+++ b/webapp/View/boardunsupported.phtml
@@ -15,8 +15,9 @@
 	<body>
 		<div class="container">
 			<br><br><br><br>
-			<div class="jumbotron">
+			<div class="jumbotron text-center">
 				<h1>Board unsupported!</h1>
+				<br>
 				<p>Your board is unsupported by this version of DTweb @_@</p>
 			</div>
 		</div>
