Updated UDOO Neo defconfig - enabled i2c1 for LVDS7

--- a/webapp/View/index.phtml
+++ b/webapp/View/index.phtml
@@ -51,6 +51,7 @@
 		if (configuration) {
 			applyConfiguration(JSON.parse(configuration));
 		}
+		board.defconfig = '<?php echo $defconfig; ?>';
 	});
 </script>
 <?php } ?>
