Fixed navbar to the top

--- a/webapp/View/_header.phtml
+++ b/webapp/View/_header.phtml
@@ -29,7 +29,7 @@
 	<body>
 		
 		<div class="bs-component">
-			<div class="navbar navbar-default">
+			<div class="navbar navbar-default navbar-fixed-top">
 				<div class="container-fluid">
 					<div class="navbar-header">
 	  					<a class="navbar-brand">Device Tree Editor</a>
