--- a/public/boards.css
+++ b/public/boards.css
@@ -1,5 +1,12 @@
 body {
     background-color: #F1F3F6;
+    padding-top:70px;
+}
+
+.navbar-fixed-top {
+    position: fixed;left: 0;right: 0; top:0;
+    -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .container-fluid {
